# Project4_Group8

./: .gitignore  CMakeLists.txt  Project4_Group8.sln  access_logs.txt  client.out  launcher  securelink.db  securelink_cli.cpp  securelink_logs.txt  server.out  server_log.txt  server_test  test_client.out  test_server.out
Project4_Group8/: Project4_Group8.vcxproj  Project4_Group8.vcxproj.filters  main.cpp  updatedclient.cpp  updatedserver.cpp
SecureLinkUI/: CMakeLists.txt  accesslogswidget.cpp  accesslogswidget.h  camerapage.cpp  camerapage.h  dashboardwindow.cpp  dashboardwindow.h  garagedoorwindow.cpp  login_backend.cpp  login_backend.h  loginwindow.cpp  loginwindow.h  logtransferwindow.cpp  logtransferwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  motionalertswidget.cpp  motionalertswidget.h  resources.qrc  smartlightwindow.cpp  smartlightwindow.h  smartlockwindow.cpp  smartlockwindow.h  toggleswitch.cpp  toggleswitch.h
SecureLinkUI_backup_2/: CMakeLists.txt  accesslogswidget.cpp  dashboardwindow.h  loginwindow.h
SecureLinkUI_backup_before_replace/: dashboardwindow.cpp  garagedoorwindow.h  login_backend.cpp  login_backend.h  loginwindow.cpp
client/: client  client.cpp  client_auth.cpp  client_config.json  client_utils.cpp  client_utils.h
client_backup_2/: client_auth.h
docs/: README.md
securelink_ui/: CMakeLists.txt  accesslogswindow.cpp  accesslogswindow.h  camerapreviewwindow.cpp  camerapreviewwindow.h  dashboardwindow.cpp  dashboardwindow.h  forgotpasswordwindow.cpp  forgotpasswordwindow.h  logtransferwindow.cpp  logtransferwindow.h  main.cpp  motionalertswindow.cpp  motionalertswindow.h  securelinkwindow.cpp  securelinkwindow.h  securelinkwindow.ui  signupwindow.cpp  signupwindow.h  smartgaragewindow.cpp  smartgaragewindow.h  smartlightwindow.cpp  smartlightwindow.h
server/: camera_handler.cpp  camera_handler.h  securelink.db  securelink_cli.cpp  server.cpp  server_config.json  server_db.cpp  server_db.h  server_launcher.cpp  server_log.txt  server_logger.cpp  server_logger.h  server_state.cpp
server_backup_2/: server_state.h
shared/: base64.cpp  base64.h  data_packet.cpp  data_packet.h  database_handler.cpp  database_handler.h
tests/: test_camera  test_camera.cpp  test_client.cpp  test_garage_toggle  test_garage_toggle.cpp  test_invalid_auth  test_invalid_auth.cpp  test_light_toggle  test_light_toggle.cpp  test_lock_toggle  test_lock_toggle.cpp  test_login  test_login.cpp  test_logs  test_logs.cpp  test_mock_db_query.cpp  test_motion_toggle.cpp  test_parse_packet_type.cpp  test_qt_login_button_state.cpp  test_qt_login_fields.cpp  test_server.cpp
